FortiGate/A-Single-VM/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "adminUsername": {
        "type": "string",
        "metadata": {
          "description": "Username for the FortiGate VM"
        }
      },
      "adminPassword": {
        "type": "securestring",
        "metadata": {
          "description": "Password for the FortiGate VM"
        }
      },
      "AzureUserName": {
        "type": "string",
        "metadata": {
          "description": "AzureUserName, AzurePassword, DeploymentID parameters are required for Azure Creds file, Must use in all Windows LabVMs"
        }
      },
      "AzurePassword": {
        "type": "securestring"
      },
      "ODLID": {
        "type": "string"
      },
      "DeploymentID": {
        "type": "string"
      },
      "InstallCloudLabsShadow": {
        "type": "string",
        "defaultValue": "yes",
        "allowedValues": [
          "yes",
          "no"
        ],
        "metadata": {
          "description": "Required for CloudlabsShadow, value should be yes if you want to install otherwise no"
        }
      },
      "trainerUserName": {
          "type": "string"
      },
      "trainerUserPassword": {
          "type": "string"
      },    
      "fortiGateNamePrefix": {
        "type": "string",
        "metadata": {
          "description": "Naming prefix for all deployed resources. The FortiGate VMs will have the suffix '-FGT-A' and '-FGT-B'. For example if the prefix is 'ACME-01' the FortiGates will be named 'ACME-01-FGT-A' and 'ACME-01-FGT-B'"
        }
      },
      "fortiGateImageSKU": {
        "type": "string",
        "defaultValue": "fortinet_fg-vm_payg_20190624",
        "allowedValues": [
          "fortinet_fg-vm",
          "fortinet_fg-vm_payg_20190624"
        ],
        "metadata": {
          "description": "Identifies whether to to use PAYG (on demand licensing) or BYOL license model (where license is purchased separately"
        }
      },
      "fortiGateImageVersion": {
        "type": "string",
        "defaultValue": "latest",
        "allowedValues": [
          "6.2.0",
          "6.2.2",
          "6.2.4",
          "6.2.5",
          "6.4.0",
          "6.4.2",
          "6.4.3",
          "6.4.5",
          "6.4.6",
          "6.4.7",
          "6.4.8",
          "7.0.0",
          "7.0.1",
          "7.0.2",
          "7.0.3",
          "7.0.4",
          "7.0.5",
          "latest"
        ],
        "metadata": {
          "description": "Select the image version"
        }
      },
      "fortiGateAdditionalCustomData": {
        "type": "string",
        "defaultValue": "",
        "metadata": {
          "description": "The ARM template provides a basic configuration. Additional configuration can be added here."
        }
      },
      "instanceType": {
        "type": "string",
        "defaultValue": "Standard_F2s",
        "allowedValues": [
          "Standard_F1s",
          "Standard_F2s",
          "Standard_F4s",
          "Standard_F8s",
          "Standard_F16s",
          "Standard_F1",
          "Standard_F2",
          "Standard_F4",
          "Standard_F8",
          "Standard_F16",
          "Standard_F2s_v2",
          "Standard_F4s_v2",
          "Standard_F8s_v2",
          "Standard_F16s_v2",
          "Standard_F32s_v2",
          "Standard_DS1_v2",
          "Standard_DS2_v2",
          "Standard_DS3_v2",
          "Standard_DS4_v2",
          "Standard_DS5_v2",
          "Standard_D2s_v3",
          "Standard_D4s_v3",
          "Standard_D8s_v3",
          "Standard_D16s_v3",
          "Standard_D32s_v3"
        ],
        "metadata": {
          "description": "Virtual Machine size selection - must be F4 or other instance that supports 4 NICs"
        }
      },
      "acceleratedNetworking": {
        "type": "string",
        "defaultValue": "false",
        "allowedValues": [
          "false",
          "true"
        ],
        "metadata": {
          "description": "Accelerated Networking enables direct connection between the VM and network card. Only available on 2 CPU F/Fs and 4 CPU D/Dsv2, D/Dsv3, E/Esv3, Fsv2, Lsv2, Ms/Mms and Ms/Mmsv2"
        }
      },
      "vnetNewOrExisting": {
        "type": "string",
        "defaultValue": "new",
        "allowedValues": [
          "new",
          "existing"
        ],
        "metadata": {
          "description": "Identify whether to use a new or existing vnet"
        }
      },
      "vnetName": {
        "type": "string",
        "defaultValue": "",
        "metadata": {
          "description": "Name of the Azure virtual network, required if utilizing an existing VNET. If no name is provided the default name will be the Resource Group Name as the Prefix and '-VNET' as the suffix"
        }
      },
      "vnetResourceGroup": {
        "type": "string",
        "defaultValue": "",
        "metadata": {
          "description": "Resource Group containing the existing virtual network, leave blank if a new VNET is being utilize"
        }
      },
      "vnetAddressPrefix": {
        "type": "string",
        "defaultValue": "10.0.0.0/22",
        "metadata": {
          "description": "Virtual Network Address prefix"
        }
      },
      "subnet1Name": {
        "type": "string",
        "defaultValue": "ExternalSubnet",
        "metadata": {
          "description": "Subnet 1 Name"
        }
      },
      "subnet1Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 1 Prefix"
        }
      },
      "subnet1StartAddress": {
        "type": "string",
        "defaultValue": "10.0.1.4",
        "metadata": {
          "description": "Subnet 1 start address, 1 consecutive private IPs are required"
        }
      },
      "subnet2Name": {
        "type": "string",
        "defaultValue": "InternalSubnet",
        "metadata": {
          "description": "Subnet 2 Subnet"
        }
      },
      "subnet2Prefix": {
        "type": "string",
        "defaultValue": "10.0.2.0/24",
        "metadata": {
          "description": "Subnet 2 Prefix"
        }
      },
      "subnet2StartAddress": {
        "type": "string",
        "defaultValue": "10.10.2.4",
        "metadata": {
          "description": "Subnet 2 start address, 1 consecutive private IPs are required"
        }
      },
      "subnet3Name": {
        "type": "string",
        "defaultValue": "ProtectedASubnet",
        "metadata": {
          "description": "Subnet 3 Name"
        }
      },
      "subnet3Prefix": {
        "type": "string",
        "defaultValue": "10.0.3.0/24",
        "metadata": {
          "description": "Subnet 3 Prefix"
        }
      },
      "serialConsole": {
        "type": "string",
        "defaultValue": "yes",
        "allowedValues": [
          "yes",
          "no"
        ],
        "metadata": {
          "description": "Enable Serial Console"
        }
      },
      "fortiManager": {
        "type": "string",
        "defaultValue": "no",
        "allowedValues": [
          "yes",
          "no"
        ],
        "metadata": {
          "description": "Connect to FortiManager"
        }
      },
      "fortiManagerIP": {
        "type": "string",
        "defaultValue": "",
        "metadata": {
          "description": "FortiManager IP or DNS name to connect to on port TCP/541"
        }
      },
      "fortiManagerSerial": {
        "type": "string",
        "defaultValue": "",
        "metadata": {
          "description": "FortiManager serial number to add the deployed FortiGate into the FortiManager"
        }
      },
      "fortiGateLicenseBYOL": {
        "type": "string",
        "defaultValue": "",
        "metadata": {
          "description": "FortiGate BYOL license content"
        }
      },
      "fortiGateLicenseFlexVM": {
        "type": "string",
        "defaultValue": "",
        "metadata": {
          "description": "FortiGate BYOL Flex-VM license token"
        }
      },
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location for all resources."
        }
      },
      "vmName": {
        "type": "string"
      },
      "virtualMachineComputerName": {
        "type": "string"
      },
      "osDiskType": {
        "type": "string",
        "defaultValue": "Standard_LRS"
      },
      "virtualMachineSize": {
        "type": "string",
        "defaultValue": "Standard_B1s"
      }
    },
    "variables": {
      "cloudlabsCommon": "[concat(' -AzureUserName ', parameters('AzureUserName'), ' -AzurePassword ', parameters('AzurePassword'), ' -AzureTenantID ', variables('AzureTenantID'), ' -AzureSubscriptionID ', variables('AzureSubscriptionID'), ' -ODLID ', parameters('ODLID'), ' -DeploymentID ', parameters('DeploymentID'),' -InstallCloudLabsShadow ', parameters('InstallCloudLabsShadow'))]",
      "Enable-CloudLabsEmbeddedShadow": "[concat(' -vmAdminUsername ', parameters('adminUsername'), ' -trainerUserName ', parameters('trainerUserName'), ' -trainerUserPassword ', parameters('trainerUserPassword'))]",  
      "AzureSubscriptionID": "[subscription().subscriptionId]",
      "AzureTenantID": "[subscription().tenantId]",
      "imagePublisher": "fortinet",
      "imageOffer": "fortinet_fortigate-vm_v5",
      "vnetName": "[if(equals(parameters('vnetName'),''),concat(parameters('fortiGateNamePrefix'),'-VNET'),parameters('vnetName'))]",
      "subnet1Id": "[if(equals(parameters('vnetNewOrExisting'),'new'),resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'),parameters('subnet1Name')),resourceId(parameters('vnetResourceGroup'),'Microsoft.Network/virtualNetworks/subnets', variables('vnetName'),parameters('subnet1Name')))]",
      "subnet2Id": "[if(equals(parameters('vnetNewOrExisting'),'new'),resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'),parameters('subnet2Name')),resourceId(parameters('vnetResourceGroup'),'Microsoft.Network/virtualNetworks/subnets', variables('vnetName'),parameters('subnet2Name')))]",
      "subnet3Id": "[if(equals(parameters('vnetNewOrExisting'),'new'),resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'),parameters('subnet3Name')),resourceId(parameters('vnetResourceGroup'),'Microsoft.Network/virtualNetworks/subnets', variables('vnetName'),parameters('subnet3Name')))]",
      "fgtVmName": "[concat('fortigatevm-', parameters('DeploymentID'))]",
      "fmgCustomData": "[if(equals(parameters('fortiManager'),'yes'),concat('\nconfig system central-management\nset type fortimanager\n set fmg ',parameters('fortiManagerIP'),'\nset serial-number ', parameters('fortiManagerSerial'), '\nend\n config system interface\n edit port1\n append allowaccess fgfm\n end\n config system interface\n edit port2\n append allowaccess fgfm\n end\n'),'')]",
      "customDataFlexVM": "[if(equals(parameters('fortiGateLicenseFlexVM'),''),'',concat('exec vm-license ',parameters('fortiGateLicenseFlexVM'), '\n'))]",
      "customDataHeader": "Content-Type: multipart/mixed; boundary=\"12345\"\nMIME-Version: 1.0\n\n--12345\nContent-Type: text/plain; charset=\"us-ascii\"\nMIME-Version: 1.0\nContent-Transfer-Encoding: 7bit\nContent-Disposition: attachment; filename=\"config\"\n\n",
      "customDataBody": "[concat('config system sdn-connector\nedit AzureSDN\nset type azure\nnext\nend\nconfig router static\nedit 1\nset gateway ', variables('sn1GatewayIP'), '\nset device port1\nnext\nedit 2\nset dst ', parameters('vnetAddressPrefix'), '\nset gateway ', variables('sn2GatewayIP'), '\nset device port2\nnext\nend\nconfig system interface\nedit port1\nset mode static\nset ip ',  variables('sn1IPfgt'), '/', variables('sn1CIDRmask'), '\nset description external\nset allowaccess pin [...]
      "customDataLicenseHeader": "--12345\nContent-Type: text/plain; charset=\"us-ascii\"\nMIME-Version: 1.0\nContent-Transfer-Encoding: 7bit\nContent-Disposition: attachment; filename=\"fgtlicense\"\n\n",
      "customDataFooter": "\n--12345--\n",
      "customDataCombined": "[concat(variables('customDataHeader'),variables('customDataBody'),variables('customDataLicenseHeader'), parameters('fortiGateLicenseBYOL'), variables('customDataFooter'))]",
      "fgtCustomData": "[base64(if(equals(parameters('fortiGateLicenseBYOL'),''),variables('customDataBody'),variables('customDataCombined')))]",
      "routeTableProtectedName": "[concat(parameters('fortiGateNamePrefix'),'-RT-PROTECTED')]",
      "routeTableProtectedId": "[resourceId('Microsoft.Network/routeTables',variables('routeTableProtectedName'))]",
      "fgtNic1Name": "[concat(variables('fgtVmName'),'-Nic1')]",
      "fgtNic1Id": "[resourceId('Microsoft.Network/networkInterfaces',variables('fgtNic1Name'))]",
      "fgtNic2Name": "[concat(variables('fgtVmName'),'-Nic2')]",
      "fgtNic2Id": "[resourceId('Microsoft.Network/networkInterfaces',variables('fgtNic2Name'))]",
      "serialConsoleStorageAccountName": "[concat('console', uniquestring(resourceGroup().id))]",
      "serialConsoleStorageAccountType": "Standard_LRS",
      "serialConsoleEnabled": "[if(equals(parameters('serialConsole'),'yes'),'true','false')]",
      "publicIpName": "[concat(parameters('fortiGateNamePrefix'),'-FGT-PIP')]",
      "publicIpAllocationMethod": "Static",
      "publicIpSku": "Standard",
      "NSGName": "[concat(parameters('fortiGateNamePrefix'),'-',uniqueString(resourceGroup().id),'-NSG')]",
      "NSGId": "[resourceID('Microsoft.Network/networkSecurityGroups/',variables('NSGName'))]",
      "sn1IPArray": "[split(parameters('subnet1Prefix'),'.')]",
      "sn1IPArray2ndString": "[string(variables('sn1IPArray')[3])]",
      "sn1IPArray2nd": "[split(variables('sn1IPArray2ndString'),'/')]",
      "sn1CIDRmask": "[string(int(variables('sn1IPArray2nd')[1]))]",
      "sn1IPArray3": "[string(add(int(variables('sn1IPArray2nd')[0]),1))]",
      "sn1IPArray2": "[string(int(variables('sn1IPArray')[2]))]",
      "sn1IPArray1": "[string(int(variables('sn1IPArray')[1]))]",
      "sn1IPArray0": "[string(int(variables('sn1IPArray')[0]))]",
      "sn1GatewayIP": "[concat(variables('sn1IPArray0'),'.',variables('sn1IPArray1'),'.',variables('sn1IPArray2'),'.',variables('sn1IPArray3'))]",
      "sn1IPStartAddress": "[split(parameters('subnet1StartAddress'),'.')]",
      "sn1IPfgt": "[concat(variables('sn1IPArray0'),'.',variables('sn1IPArray1'),'.',variables('sn1IPArray2'),'.',int(variables('sn1IPStartAddress')[3]))]",
      "sn2IPArray": "[split(parameters('subnet2Prefix'),'.')]",
      "sn2IPArray2ndString": "[string(variables('sn2IPArray')[3])]",
      "sn2IPArray2nd": "[split(variables('sn2IPArray2ndString'),'/')]",
      "sn2CIDRmask": "[string(int(variables('sn2IPArray2nd')[1]))]",
      "sn2IPArray3": "[string(add(int(variables('sn2IPArray2nd')[0]),1))]",
      "sn2IPArray2": "[string(int(variables('sn2IPArray')[2]))]",
      "sn2IPArray1": "[string(int(variables('sn2IPArray')[1]))]",
      "sn2IPArray0": "[string(int(variables('sn2IPArray')[0]))]",
      "sn2GatewayIP": "[concat(variables('sn2IPArray0'),'.',variables('sn2IPArray1'),'.',variables('sn2IPArray2'),'.',variables('sn2IPArray3'))]",
      "sn2IPStartAddress": "[split(parameters('subnet2StartAddress'),'.')]",
      "sn2IPfgt": "[concat(variables('sn2IPArray0'),'.',variables('sn2IPArray1'),'.',variables('sn2IPArray2'),'.',int(variables('sn2IPStartAddress')[3]))]",
      "nicName": "[concat(parameters('vmName'), '-nic')]",
      "networkSecurityGroupName": "[concat(parameters('vmName'), '-nsg')]",
      "nsgId": "[resourceId(resourceGroup().name, 'Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
    },
    "resources": [
      {
        "apiVersion": "2015-01-01",
        "name": "[concat(parameters('fortiGateNamePrefix'), '-fortinetdeployment-', uniquestring(resourceGroup().id))]",
        "type": "Microsoft.Resources/deployments",
        "properties": {
          "mode": "Incremental",
          "template": {
            "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
            "contentVersion": "1.0.0.0",
            "resources": []
          }
        }
      },
      {
        "condition": "[equals(parameters('serialConsole'), 'yes')]",
        "type": "Microsoft.Storage/storageAccounts",
        "name": "[variables('serialConsoleStorageAccountName')]",
        "apiVersion": "2021-02-01",
        "location": "[parameters('location')]",
        "kind": "Storage",
        "sku": {
          "name": "[variables('serialConsoleStorageAccountType')]"
        }
      },
      {
        "type": "Microsoft.Network/routeTables",
        "name": "[variables('routeTableProtectedName')]",
        "apiVersion": "2020-04-01",
        "location": "[parameters('location')]",
        "properties": {
          "routes": [
            {
              "name": "VirtualNetwork",
              "properties": {
                "addressPrefix": "[parameters('vnetAddressPrefix')]",
                "nextHopType": "VirtualAppliance",
                "nextHopIPAddress": "[variables('sn2IPfgt')]"
              }
            },
            {
              "name": "Subnet",
              "properties": {
                "addressPrefix": "[parameters('subnet3Prefix')]",
                "nextHopType": "VnetLocal"
              }
            },
            {
              "name": "Default",
              "properties": {
                "addressPrefix": "0.0.0.0/0",
                "nextHopType": "VirtualAppliance",
                "nextHopIPAddress": "[variables('sn2IPfgt')]"
              }
            }
          ]
        }
      },
      {
        "condition": "[equals(parameters('vnetNewOrExisting'), 'new')]",
        "type": "Microsoft.Network/virtualNetworks",
        "apiVersion": "2020-04-01",
        "name": "[variables('vnetName')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[variables('routeTableProtectedId')]"
        ],
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[parameters('vnetAddressPrefix')]"
            ]
          },
          "subnets": [
            {
              "name": "[parameters('subnet1Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet1Prefix')]"
              }
            },
            {
              "name": "[parameters('subnet2Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet2Prefix')]"
              }
            },
            {
              "name": "[parameters('subnet3Name')]",
              "properties": {
                "addressPrefix": "[parameters('subnet3Prefix')]",
                "routeTable": {
                  "id": "[variables('routeTableProtectedId')]"
                }
              }
            }
          ]
        }
      },
      {
        "apiVersion": "2020-04-01",
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[variables('NSGName')]",
        "location": "[parameters('location')]",
        "properties": {
          "securityRules": [
            {
              "name": "AllowAllInbound",
              "properties": {
                "description": "Allow all in",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 100,
                "direction": "Inbound"
              }
            },
            {
              "name": "AllowAllOutbound",
              "properties": {
                "description": "Allow all out",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 105,
                "direction": "Outbound"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Network/publicIPAddresses",
        "apiVersion": "2020-04-01",
        "name": "[variables('publicIpName')]",
        "location": "[parameters('location')]",
        "sku": {
          "name": "[variables('publicIpSku')]"
        },
        "properties": {
          "publicIPAllocationMethod": "[variables('publicIPAllocationMethod')]",
          "dnsSettings": {
            "domainNameLabel": "[concat(toLower(variables('fgtVmName')), '-', uniquestring(resourceGroup().id))]"
          }
        }
      },
      {
        "apiVersion": "2020-04-01",
        "type": "Microsoft.Network/networkInterfaces",
        "name": "[variables('fgtNic1Name')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName'))]",
          "[variables('vnetName')]",
          "[variables('NSGId')]"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "privateIPAddress": "[variables('sn1IPfgt')]",
                "privateIPAllocationMethod": "Static",
                "publicIPAddress": {
                    "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName'))]"
                },
                "subnet": {
                  "id": "[variables('subnet1Id')]"
                }
              }
            }
          ],
          "enableIPForwarding": true,
          "enableAcceleratedNetworking": "[parameters('acceleratedNetworking')]",
          "networkSecurityGroup": {
            "id": "[variables('NSGId')]"
          }
        }
      },
      {
        "apiVersion": "2020-04-01",
        "type": "Microsoft.Network/networkInterfaces",
        "name": "[variables('fgtNic2Name')]",
        "location": "[parameters('location')]",
        "dependsOn": [
          "[variables('vnetName')]"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "privateIPAllocationMethod": "Static",
                "privateIPAddress": "[variables('sn2IPfgt')]",
                "subnet": {
                  "id": "[variables('subnet2Id')]"
                }
              }
            }
          ],
          "enableIPForwarding": true,
          "enableAcceleratedNetworking": "[parameters('acceleratedNetworking')]",
          "networkSecurityGroup": {
            "id": "[variables('NSGId')]"
          }
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachines",
        "name": "[variables('fgtVmName')]",
        "apiVersion": "2021-07-01",
        "identity": {
          "type": "SystemAssigned"
        },
        "location": "[parameters('location')]",
        "plan": {
          "name": "[parameters('fortiGateImageSKU')]",
          "publisher": "[variables('imagePublisher')]",
          "product": "[variables('imageOffer')]"
        },
        "dependsOn": [
          "[variables('fgtNic1Id')]",
          "[variables('fgtNic2Id')]"
        ],
        "properties": {
          "hardwareProfile": {
            "vmSize": "[parameters('instanceType')]"
          },
          "osProfile": {
            "computerName": "[variables('fgtVmName')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]",
            "customData": "[variables('fgtCustomData')]"
          },
          "storageProfile": {
            "imageReference": {
              "publisher": "[variables('imagePublisher')]",
              "offer": "[variables('imageOffer')]",
              "sku": "[parameters('fortiGateImageSKU')]",
              "version": "[parameters('FortigateImageVersion')]"
            },
            "osDisk": {
              "createOption": "FromImage"
            },
            "dataDisks": [
              {
                "diskSizeGB": 30,
                "lun": 0,
                "createOption": "Empty"
              }
            ]
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "properties": {
                  "primary": true
                },
                "id": "[variables('fgtNic1Id')]"
              },
              {
                "properties": {
                  "primary": false
                },
                "id": "[variables('fgtNic2Id')]"
              }
            ]
          },
          "diagnosticsProfile": {
            "bootDiagnostics": {
              "enabled": false,
              "storageUri": "[if(equals(parameters('serialConsole'), 'yes'), reference(variables('serialConsoleStorageAccountName'), '2021-08-01').primaryEndpoints['blob'], json('null'))]"
            }
          }
        }
      },
      {
        "type": "Microsoft.Network/networkInterfaces",
        "apiVersion": "2017-03-01",
        "name": "[variables('nicName')]",
        "location": "[resourceGroup().location]",
        "dependsOn": [
          "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]",
          "[variables('vnetName')]"
        ],
        "properties": {
          "ipConfigurations": [
            {
              "name": "ipconfig1",
              "properties": {
                "subnet": {
                  "id": "[variables('subnet3Id')]"
                },
                "privateIPAllocationMethod": "Static",
                "privateIPAddress": "10.0.3.4"
              }
            }
          ],
          "networkSecurityGroup": {
            "id": "[variables('nsgId')]"
          }
        }
      },
      {
        "type": "Microsoft.Network/networkSecurityGroups",
        "apiVersion": "2019-02-01",
        "name": "[variables('networkSecurityGroupName')]",
        "location": "[resourceGroup().location]",
        "properties": {
          "securityRules": [
            {
              "name": "HTTP",
              "properties": {
                "priority": 1010,
                  "protocol": "Tcp",
                  "access": "Allow",
                  "direction": "Inbound",
                  "sourceApplicationSecurityGroups": [],
                  "destinationApplicationSecurityGroups": [],
                  "sourceAddressPrefix": "*",
                  "sourcePortRange": "*",
                  "destinationAddressPrefix": "*",
                  "destinationPortRange": "80"
              }
            },
            {
              "name": "HTTPS",
              "properties": {
                "priority": 1020,
                  "protocol": "Tcp",
                  "access": "Allow",
                  "direction": "Inbound",
                  "sourceApplicationSecurityGroups": [],
                  "destinationApplicationSecurityGroups": [],
                  "sourceAddressPrefix": "*",
                  "sourcePortRange": "*",
                  "destinationAddressPrefix": "*",
                  "destinationPortRange": "443"
              }
            },
            {
              "name": "SSH",
              "properties": {
                "priority": 1030,
                  "protocol": "Tcp",
                  "access": "Allow",
                  "direction": "Inbound",
                  "sourceApplicationSecurityGroups": [],
                  "destinationApplicationSecurityGroups": [],
                  "sourceAddressPrefix": "*",
                  "sourcePortRange": "*",
                  "destinationAddressPrefix": "*",
                  "destinationPortRange": "22"
              }
            },
            {
              "name": "AllowAllInbound",
              "properties": {
                "description": "Allow all in",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 101,
                "direction": "Inbound"
              }
            },
            {
              "name": "AllowAllOutbound",
              "properties": {
                "description": "Allow all out",
                "protocol": "*",
                "sourcePortRange": "*",
                "destinationPortRange": "*",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 103,
                "direction": "Outbound"
              }
            }
          ]
        }
      },
      {
        "type": "Microsoft.Compute/virtualMachines",
        "apiVersion": "2017-03-30",
        "name": "[parameters('vmName')]",
        "location": "[resourceGroup().location]",
        "dependsOn": [
          "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
        ],
        "plan": {
          "name": "7-0",
          "publisher": "bitnami",
          "product": "tom-cat"
        },
        "properties": {
          "hardwareProfile": {
            "vmSize": "[parameters('virtualMachineSize')]"
          },
          "storageProfile": {
            "osDisk": {
              "createOption": "FromImage",
              "managedDisk": {
                "storageAccountType": "[parameters('osDiskType')]"
              }
            },
            "imageReference": {
              "publisher": "bitnami",
              "offer": "tom-cat",
              "sku": "7-0",
              "version": "latest"
            }
          },
          "networkProfile": {
            "networkInterfaces": [
              {
                "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
              }
            ]
          },
          "osProfile": {
            "computerName": "[parameters('virtualMachineComputerName')]",
            "adminUsername": "[parameters('adminUsername')]",
            "adminPassword": "[parameters('adminPassword')]"
          },
          "diagnosticsProfile": {
            "bootDiagnostics": {
              "enabled": false
            }
          }
        }
      }
    ],
    "outputs": {
      "adminUsername": {
        "type": "string",
        "value": "[parameters('adminUsername')]"
      },
      "adminPassword": {
        "type": "string",
        "value": "[parameters('adminPassword')]"
      },
      "fortiGatePublicIP": {
        "type": "string",
        "value": "[reference(variables('publicIpName')).ipAddress]"
      },
      "DeploymentID": {
        "type": "string",
        "value": "[parameters('DeploymentID')]"
      },
      "fortiGatePrivateIP1": {
        "type": "string",
        "value": "[reference(variables('fgtNic1Name')).ipConfigurations[0].properties.privateIPAddress]"
      },
      "fortiGatePrivateIP2": {
        "type": "string",
        "value": "[reference(variables('fgtNic2Name')).ipConfigurations[0].properties.privateIPAddress]"
      },  
      "fortiGateFQDN": {
        "type": "string",
        "value": "[concat('https://', reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpName'))).dnsSettings.fqdn)]"
      }
    }
  }
